aerostore_macros/tests/ui/compile_fail_reserved_xmax.rs
use aerostore_macros::speedtable;

#[speedtable]
#[repr(C)]
struct BadReservedXmax {
    _xmax: u64,
    altitude: i32,
}

fn main() {}

